<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlushHubProto</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_find">Find Your Restroom</string>
    <string name="menu_rate">Review Restrooms</string>
    <string name="menu">Menu</string>
    <string name="the_flushhub" translatable="false">The FlushHub</string>
    <string name="greet_user_default">Don\'t worry, user!</string>
    <string name="nearest_restroom_is_x_miles_away">The nearest restroom is .01 miles away </string>
    <string name="bathroom_entertainment">Bathroom Entertainment</string>
    <string name="nearest_restrooms">Nearest Restrooms:</string>
    <string name="address_default" translatable="false">621 Commonwealth Ave, Boston, MA 02215</string>
    <string name="item_dist_default">0.2 miles</string>
    <string name="item_minaway_default">4 mins</string>
    <string name="landing_greeting">Welcome to the FlushHub!</string>
    <string name="query_greeting">Don\'t worry Flushhubs got you!</string>
    <string name="query_progress_1">Finding the Perfect Bathrooms…</string>
    <string name="query_progress_2">Flushing Bad Reviews…</string>
    <string name="query_progress_3">Calculating Bathroom Criteria…</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="submit">Enter</string>
    <string name="landing_app_description">Boston University\'s #1 restroom finder tool!</string>
    <string name="find_your_restroom">Find Your Restroom</string>
    <string name="gender">Gender:</string>
    <string name="campus">Campus Area:</string>
    <string name="rating">Restroom Rating:</string>
    <string name="find">FIND</string>
    <string name="central">Central</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="what_type_of_restroom_are_you_looking_for">What type of restroom are you looking for?</string>
    <string name="restroom_nickname_hint">Restroom Nickname\n</string>
    <string name="type_your_review_here"> Type your review here</string>
    <string name="submit_review">Submit Review</string>
    <string name="leave_a_review">Leave a review: </string>
    <string name="building">Building:</string>
    <string name="floor">at Floor:</string>
    <string name="leave_a_n_restroom_review">Leave a \n Restroom Review!</string>
    <string name="rate_this_restroom">Rate this restroom:</string>
    <string name="restroom_nickname">Restroom</string>
    <string name="give_this_restroom_a_nickname">Give this restroom a nickname</string>
    <string name="location">LOCATION:</string>
    <string name="select_building">Select building</string>
    <string name="select_floor">Select floor</string>
    <string name="flushhub_news">FlushHub News</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="details">Details</string>
    <string name="start_your_route">START YOUR ROUTE</string>
    <string name="go">GO</string>
    <string name="no_ratings_available">No ratings available</string>
    <string name="number_one" translatable="false">#1</string>
    <string name="restroom_name">Restroom Name:</string>
    <string name="name">Name</string>
    <string name="building_location">Building location</string>
    <string name="floor_location">Floor location</string>
    <string name="default_rank">4.5</string>
    <string name="at_floor_list">at Floor</string>
    <string name="building_list">Building</string>
    <string name="gender_list">Gender</string>
    <string name="miles">mi</string>
    <string name="minutes">min</string>
    <string name="top_restroom">BU\'S Top Restrooms</string>
    <string name="entertainment_banner">FlushHub Fun!</string>
    <string name="news_banner" translatable="false">Flush Hub News</string>
    <string name="ask_name">Please enter your name</string>
    <string name="dont_worry">Don\'t worry,</string>
    <string name="nearest">The nearest restroom is</string>
    <string name="miles_away">miles away!</string>
    <string name="your_restrooms">Your Restrooms: </string>
    <string name="stars">stars</string>
    <string name="back" translatable="false">Back</string>
    <string name="generate_meme" translatable="false">Click for a random meme</string>
    <string name="cute_animals">CUTE ANIMALS!</string>
    <string name="cute_animals_menu">CUTE ANIMALS</string>
    <string name="play_boggle">PLAY BOGGLE</string>
    <string name="play_hangman">PLAY HANGMAN</string>
    <string name="elevate_your_restroom_experience_with">Elevate your restroom experience</string>
    <string name="click_for_a_random_cat">Click for a random cat!</string>
    <string name="click_for_a_random_dog">Click for a random dog!</string>
    <string name="click_for_a_random_fox">Click for a random fox!</string>
    <string name="enter_a_word_then_hit_submit">Tap adjacent letters together to form a word, \n then press enter</string>
    <string name="clear">Clear</string>
    <string name="score">Score:</string>
    <string name="default_score" translatable="false">0</string>
    <string name="submit_button">Submit</string>
    <string name="new_game">New Game</string>
    <string name="boggle" translatable="false">Boggle!</string>
    <string name="word">WORD</string>
    <string name="browse_the_news" tools:ignore="ExtraTranslation">BROWSE THE NEWS</string>
    <string name="permission_denied">Using BU Central\'s Location as Starting Point</string>
    <string name="query_not_found">No Bathrooms Found!</string>
    <string name="reviews">Reviews:</string>
    <string name="review">Review:</string>
    <string name="review_rating">Rating:</string>
    <string name="x_stars" translatable="false">X Stars</string>
    <string name="flushhub_got_you">FlushHub\'s got you.</string>
    <string name="select_a_building">select a building</string>
    <string name="rating_label">Rating:</string>
    <string name="bathroom_details">Bathroom Details:</string>
    <string name="description">Description:</string>
    <string name="placeholder">Placeholder</string>
    <string name="top_review">Top Review:</string>
    <string name="go_capitalized">GO</string>
    <string name="flushhub" translatable="false">FlushHub</string>
    <string name="address_">Address:</string>
    <string name="address">Address</string>
    <string name="distance">Distance:</string>
    <string name="distance_">Distance</string>
    <string name="eta">ETA:</string>
    <string name="eta_">ETA</string>
    <string name="rating_">Rating:</string>
    <string name="_reviews">Reviews:</string>
    <string name="return_">Return</string>
    <string name="title_">Title</string>
    <string name="author_">Author</string>
    <string name="content">content</string>
    <string name="details_will_appear_here">Details will appear here</string>
    <string name="_0_0_stars">0.0 stars</string>
    <string name="stars_review_list">stars</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="_1" translatable="false">#1</string>
    <string name="reviews_for">Reviews for</string>
    <string name="general">General</string>
    <string name="sport">Sport</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="reviews_">REVIEW</string>
    <string name="rank">Ranking:</string>
    <string name="floor_number">Floor Number:</string>
    <string name="restroom_building">Restroom Building:</string>
    <string name="submit_your_review">SUBMIT YOUR REVIEW!:</string>

</resources>