<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/landing_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src ="@drawable/bu_logo"
        android:layout_gravity="center"
        >
    </ImageView>
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_greeting"
        android:textSize="30sp"
        android:fontFamily="@font/ruda_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_app_description"
        android:textSize="18sp"
        android:fontFamily="@font/ruda_black"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/ruda_regular"
        android:hint="@string/what_is_your_name"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruda_bold"
        android:text="@string/submit"
        />



</LinearLayout>
