<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topDrawer"
    android:layout_width="match_parent"
    android:layout_height="720dp"
    android:background="@color/fh_tool_bar"
    android:translationY="-720dp"
    android:elevation="6dp"
    android:fitsSystemWindows="true"
    >

    <include layout="@layout/nav_header_main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:fitsSystemWindows="true"
        android:elevation="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruda_black"
            android:text="@string/menu"
            android:textSize="40sp"
            android:elevation="30dp"
            android:textColor="@color/black"
            android:translationX="122dp"
            android:translationY="260dp">

        </TextView>
        <ImageButton
            android:id = "@+id/menu_button_close"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:translationY="155dp"
            android:elevation="7dp"
            android:background="@android:color/transparent"
            android:src="@drawable/tp_menu">
        </ImageButton>

        <View
            android:layout_width="wrap_content"
            android:layout_height="170dp" />

        <Button
            android:id="@+id/btn_nav_home"
            android:textSize="25sp"
            android:background="@drawable/menu_button_style"
            android:backgroundTint="@color/fh_tool_bar"
            android:layout_width="440dp"
            android:layout_height="70dp"
            android:elevation="9dp"
            android:drawableLeft="@drawable/home_icon"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/menu_home"
            android:textAlignment="textStart"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <Button
            android:id="@+id/btn_nav_find"
            android:layout_width="440dp"
            android:elevation="9dp"
            android:layout_height="70dp"
            android:background="@drawable/menu_button_style"
            android:textSize="21sp"
            android:drawableLeft="@drawable/toilet_icon"
            android:textAlignment="textStart"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/menu_find" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <Button
            android:id="@+id/btn_nav_rate"
            android:layout_width="440dp"
            android:elevation="9dp"
            android:layout_height="70dp"
            android:drawableLeft="@drawable/star_icon"
            android:background="@drawable/menu_button_style"
            android:fontFamily="@font/ruda_bold"
            android:textSize="21sp"
            android:textAlignment="textStart"
            android:text="@string/menu_rate"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <Button
            android:id="@+id/btn_nav_entertainment"
            android:layout_width="440dp"
            android:layout_height="70dp"
            android:textAlignment="textStart"
            android:elevation="9dp"
            android:background="@drawable/menu_button_style"
            android:fontFamily="@font/ruda_bold"
            android:textSize="21sp"
            android:drawableLeft="@drawable/popcorn_icon"
            android:text="@string/bathroom_entertainment" />

    </LinearLayout>

</FrameLayout>