<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="430dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="@color/fh_tool_bar"

    android:elevation="10dp"


    tools:context="com.example.flushhubproto.ui.gallery.FindRestroomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tp_menu_back"


        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </View>

        <TextView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/ruda_regular"
            android:shadowColor="@color/black"
            android:shadowRadius="1"
            android:text="@string/what_type_of_restroom_are_you_looking_for"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"></TextView>

        <View
            android:layout_width="320dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/black"

            android:translationY="-15dp" />


        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/gender"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:translationY="-5dp"
            android:backgroundTint="@color/purple_500"


            android:orientation="horizontal"
            android:progressTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/woman_icon"
                android:elevation="4dp"


                />

            <RadioButton
                android:id="@+id/gender_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/gender_nuetral_icon"
                android:elevation="4dp" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/man_icon"
                android:elevation="4dp" />


        </RadioGroup>


        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-30dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/campus"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <LinearLayout
            android:id="@+id/campus_section"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:translationX="7dp"
            android:translationY="-20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_radio_group">

            <Button
                android:id="@+id/campus_west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="4dp"
                android:fontFamily="@font/ruda_black"
                android:text="@string/west"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/campus_central"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="4dp"
                android:fontFamily="@font/ruda_black"
                android:text="@string/central"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/campus_east"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="4dp"
                android:fontFamily="@font/ruda_black"
                android:text="@string/east"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:layout_marginTop="-60dp"


            android:background="@color/black">

        </View>

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:numStars="5"
            android:progressTint="@color/purple_500"
            android:rating="3"
            android:translationY="-15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campus_section" />


        <View
            android:layout_width="320dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"

            android:background="@color/black">

        </View>

        <Button
            android:id="@+id/find_button"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/find_button"
            android:drawableLeft="@drawable/search_icon"
            android:elevation="5dp"
            android:fontFamily="@font/ruda_black"
            android:text="@string/find"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>