<?xml version="1.0" encoding="utf-8"?>
<!-- <EditText
            android:id="@+id/reviewComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruda_regular"
            android:hint="@string/type_your_review_here"
            android:inputType="textMultiLine"
            android:minLines="3" />-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fh_tool_bar"
    tools:context="com.example.flushhubproto.ui.gallery.FindRestroomFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@color/fh_tool_bar"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"

            android:fontFamily="@font/ruda_regular"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:text="@string/leave_a_n_restroom_review"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold">

        </TextView>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_gravity="center"

            android:background="@color/black" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ruda_bold"

            android:text="@string/rate_this_restroom"
            android:textAlignment="center"

            android:textColor="@color/black"
            android:textSize="25sp"
            android:translationY="5dp">

        </TextView>

        <RatingBar
            android:id="@+id/reviewRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:numStars="5"
            android:progressTint="@color/purple_500"
            android:rating="4.5"
            android:translationY="-20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/campus_section" />

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/black"


            android:translationY="-20dp">

        </View>

        <TextView

            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-30dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/restroom_nickname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:translationY="-20dp">

        </TextView>

        <EditText
            android:id="@+id/reviewNickname"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:elevation="8dp"
            android:fontFamily="@font/ruda_regular"
            android:shadowColor="@color/black"

            android:text="@string/give_this_restroom_a_nickname"
            android:textAlignment="center"
            android:textSize="16sp">

        </EditText>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"

            android:background="@color/black" />


        <TextView

            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-30dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:translationY="-20dp">

        </TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/buildingSpinner"
                android:layout_width="150dp"

                android:layout_height="40dp"
                android:fontFamily="@font/ruda_regular"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:prompt="@string/select_floor"
                android:translationX="20dp" />

            <Spinner
                android:id="@+id/floorSpinner"
                android:layout_width="150dp"
                android:fontFamily="@font/ruda_regular"

                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:prompt="@string/select_building"
                android:translationX="20dp" />


        </LinearLayout>

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/purple_500"
            android:orientation="horizontal"


            android:progressTint="@color/purple_500"


            android:scaleX=".8"
            android:scaleY=".8"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/woman_icon"
                android:elevation="4dp"


                />

            <RadioButton
                android:id="@+id/gender_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/gender_nuetral_icon"
                android:elevation="4dp" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/man_icon"
                android:elevation="4dp" />


        </RadioGroup>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"

            android:background="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/leave_a_review"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:translationX="110dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/reviewEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/type_your_review_here"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:fontFamily="@font/ruda_regular"
                android:minLines="3"
                android:background="@color/white" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

