<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="16dp">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src = "@drawable/bathroom_location_icon"
            android:scaleType="fitEnd">

        </ImageButton>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="13dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_default"
                android:textSize="14sp"

                android:textColor="#000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_dist_default"
                    android:textSize="14sp"
                    android:textColor="#666" />
                <View
                    android:layout_width="210dp"
                    android:layout_height="20dp">

                </View>

                <TextView
                    android:id="@+id/time_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_minaway_default"
                    android:textSize="14sp"
                    android:textColor="#666"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
